Correction du CSS

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <main>
     <article>
-        <img src="css" alt="Escape Game">
+        <img src="./pirateship.jpg" alt="Escape Game">
         <img src="css" alt="Escape Game">
         <img src="css" alt="Escape Game">
     </article>
@@ -156,7 +156,7 @@
 <footer>
     <p>SAE 1.05 - Escape Game</p>
     <p>© 2020 - Tous droits réservés</p>
-    <p>Made by Scoma-gébelin Gabriel, Di Rollo Alix, Elslander Adrien, Simson Bouchet Charles...</p>
+    <p>Made by Elslander Adrien, Scoma-Gébelin Gabriel, Di Rollo Alix et Simson Bouchet Charles</p>
 </footer>
 
 </body>
