Correction du CSS

--- a/index.html
+++ b/index.html
@@ -43,113 +43,90 @@
 
 <main>
     <article>
-        <img src="./pirateship.jpg" alt="Escape Game">
-        <img src="css" alt="Escape Game">
-        <img src="css" alt="Escape Game">
+        <img src="css/pres1.jpg" alt="Escape Game">
+        <img src="css/pres2.jpg" alt="Escape Game">
+        <img src="css/pres3.jpeg" alt="Escape Game">
     </article>
     <article>
         <a id="room1"></a>
         <h2>Le verrou de fer</h2>
-        <p>
-            Les joueurs commencent dans une obscurité quasi totale, ressentant immédiatement la froideur du métal, et
-            l’humidité de la cale.
-            La seule source de lumière est un vieux chandelier, dont la lumière vacillante et frêle permet à peine aux
-            joueurs de voir les limites de la cage.
-            Le reste de la zone est complètememt plongé dans le noir. Les murs suintent d’humidité et le sol de la cale
-            semble miteux et instable…
-            Leurs poignets sont enchaînés et une unique clé peut les libérer. Cependant, la clé est hors de portée
-            directe de la plupart des joueurs.
-            L’étape initiale consiste à comprendre comment récupérer cette clé. Les joueurs doivent fouiller la pièce
-            méthodiquement,
-            observer les indices laissés (objets abandonnés etc) et réfléchir ensemble pour trouver une solution.
-            Seul un membre de l’équipe est physiquement capable de l’atteindre, ce qui oblige les joueurs à démêler les
-            chaînes,
-            se déplacer en communiquant, pour donner des indications précises au seul membre dont la chaîne démêlée sera
-            assez longue pour atteindre la clé,
-            cachée dans une vieille bouteille en verre. Une fois la clé récupérée, une vieille lampe s’allume au fond de
-            la cale, près de la sortie,
-            fournissant à la fois un peu de clarté mais aussi un guide aux joueurs pour aller dans la bonne direction.
-            En cas de fausse piste pour les joueurs, un son directionnel peut les aider à se focaliser sur ce qu’ils
-            n’ont pas jugé utile de considérer.
-        </p>
+        <div class="container">
+            <img src="./css/room1.jpg" alt="Escape Game">
+            <p>
+                Les joueurs commencent dans une obscurité presque totale, ressentant immédiatement la froideur du métal
+                et l’humidité de la cale. La seule source de lumière est un vieux chandelier dont la lumière vacillante
+                révèle à peine les limites de la cage. Le reste de la zone est complètement plongé dans le noir. Les
+                murs suintent d’humidité et le sol semble instable. Leurs poignets sont enchaînés, et une clé est
+                nécessaire pour les libérer, mais elle est hors de portée directe de la plupart. Les joueurs doivent
+                fouiller méthodiquement la pièce, observer les indices laissés et réfléchir ensemble pour récupérer
+                cette clé. Seul un membre de l’équipe peut physiquement l’atteindre, ce qui force les joueurs à démêler
+                les chaînes tout en communiquant pour diriger celui dont la chaîne est assez longue. La clé est cachée
+                dans une vieille bouteille en verre. Une fois récupérée, une lampe s’allume au fond de la cale,
+                éclairant légèrement la pièce et guidant les joueurs vers la sortie. Si les joueurs se trompent, un son
+                directionnel les aidera à se recentrer sur ce qu’ils ont négligé.
+            </p>
+        </div>
     </article>
     <article>
         <a id="room2"></a>
         <h2>Les secrets du Désordre</h2>
-        <p class="pair">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec molestie nibh vel turpis finibus, a dictum
-            orci dictum.
-            Nullam hendrerit tincidunt tellus, vitae cursus eros pharetra in. Phasellus hendrerit sit amet mauris id
-            semper.
-            Maecenas ultrices sapien massa, vitae dapibus elit auctor et. Fusce mollis sagittis tempor. Vestibulum ut
-            tempor erat,
-            id posuere magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam at auctor enim, at
-            tristique est.
-            Nulla mauris orci, ultrices sit amet volutpat eget, aliquam eu purus. Cras orci enim, interdum id nisi vel,
-            viverra tempus tortor.
-            Duis vel risus eget leo posuere ornare at eget leo. Cras et tortor efficitur, tincidunt ex eget, blandit
-            neque. Fusce vitae mauris id justo viverra blandit.
-            Curabitur tempus, tellus condimentum aliquet tristique, arcu dolor convallis eros, interdum aliquam leo dui
-            nec felis.
-            Suspendisse eu turpis eu elit volutpat condimentum. Fusce mi mauris, placerat vel blandit at, gravida sed
-            nibh. Mauris semper varius metus, non sagittis nulla ullamcorper sit amet.
-            Suspendisse non mi mauris. Donec tortor mauris, consectetur vel erat viverra, ultrices accumsan ipsum.
-            Integer ac eros a ante interdum sagittis eget sit amet neque. Mauris iaculis purus velit,
-            a posuere nisl ultricies a. Donec convallis rhoncus interdum. Vestibulum bibendum urna neque, a pharetra
-            ante blandit eu. Mauris ac placerat turpis. Vivamus imperdiet nulla sed sapien efficitur,
-            at vulputate quam fringilla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-            inceptos himenaeos.
-        </p>
+        <div class="container">
+            <p>
+                Les joueurs commencent dans une obscurité quasi totale, ressentant immédiatement la froideur du métal et
+                l’humidité de la cale. Un vieux chandelier diffuse une lumière vacillante qui permet à peine de
+                distinguer les limites de la cage. Le reste de la zone est plongé dans l’obscurité complète, les murs
+                suintant d’humidité et le sol paraissant instable sous leurs pieds. Leurs poignets sont enchaînés, et
+                seule une clé peut les libérer, mais elle est hors de portée directe pour la plupart des joueurs. Ils
+                doivent fouiller méthodiquement la pièce, en observant les indices laissés çà et là. Ensemble, ils
+                réfléchissent à la meilleure façon de récupérer cette clé. Un seul membre de l’équipe est physiquement
+                capable de l’atteindre, ce qui oblige les joueurs à démêler leurs chaînes et à coopérer en se déplaçant
+                pour donner des indications précises. La clé est cachée dans une vieille bouteille en verre, ajoutant
+                une difficulté supplémentaire. Une fois qu’ils l’ont récupérée, une vieille lampe s’allume au fond de la
+                cale, éclairant faiblement la pièce et leur fournissant une direction claire vers la sortie. Si les
+                joueurs empruntent une mauvaise piste, un son directionnel les aide à se concentrer sur les éléments
+                qu’ils ont peut-être négligés.
+            </p>
+            <img src="./css/room2.jpg" alt="Escape Game">
+        </div>
     </article>
     <article>
         <a id="room3"></a>
         <h2>Coup de froid</h2>
-        <p class="impair">
-            Les joueurs émergent de la cale pour se retrouver sur le pont supérieur. Un système rend la pièce glaciale,
-            ce qui force les joueurs à se hâter.
-            L’humidité omniprésente rend les pas des joueurs balbutiants, car le sol glisse. Le craquement du bois sous
-            leurs pieds est presque étouffé par le bruit des vagues violentes qui tapent sur la coque du navire.
-            La lune est partiellement cachée par les épais nuages et seule sa lumière filtrante éclaire faiblement le
-            chemin.
-            Les joueurs doivent progresser à travers un pont vaste et encombré. En travaillant de pair, ils devront
-            déplacer des caisses et défaire les cordages qui leur bloquent la route vers la poupe du navire,
-            où ils trouveront sans doute un canot.
-            De nombreux mécanismes devront être compris et actionnés pour libérer le passage. Sous forme de jeu de
-            mémoire, les joueurs devront retenir sur quels cordages tirer simultanément pour relever les filets tombés
-            des mâts brisés.
-            Des sons directionnels (voiles qui claquent, oiseaux marins) pourraient leur rappeler le temps qui presse ou
-            leur indiquer qu’ils sont sur la bonne voie.
-            Les flaques et autres obstacles de la zone leur rendront la tâche d’autant plus difficile que la température
-            devient insupportable.
-        </p>
+        <div class="container">
+            <img src="./css/room3.jpg" alt="Escape Game">
+            <p>
+                Les joueurs émergent de la cale pour arriver sur le pont supérieur. L’air glacé les force à se hâter.
+                L’humidité rend leurs pas incertains, car le sol glisse. Le craquement du bois sous leurs pieds est
+                presque couvert par le fracas des vagues contre la coque. La lune, partiellement cachée par les nuages
+                épais, éclaire à peine le chemin. Ils doivent progresser à travers un pont encombré, déplacer des
+                caisses et défaire des cordages pour atteindre la poupe, où se trouve probablement un canot. De nombreux
+                mécanismes doivent être compris et activés pour libérer le passage. Un jeu de mémoire les amène à
+                retenir les bons cordages à tirer simultanément afin de relever les filets tombés des mâts brisés. Des
+                sons directionnels, comme des voiles qui claquent ou des cris d’oiseaux, peuvent rappeler l’urgence ou
+                indiquer la bonne direction. Les flaques et obstacles compliquent leur progression, d’autant que la
+                température devient de plus en plus insupportable.
+            </p>
+        </div>
     </article>
     <article>
         <a id="room4"></a>
         <h2>La fuite</h2>
-        <p class="pair">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec molestie nibh vel turpis finibus, a dictum
-            orci dictum.
-            Nullam hendrerit tincidunt tellus, vitae cursus eros pharetra in. Phasellus hendrerit sit amet mauris id
-            semper.
-            Maecenas ultrices sapien massa, vitae dapibus elit auctor et. Fusce mollis sagittis tempor. Vestibulum ut
-            tempor erat,
-            id posuere magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam at auctor enim, at
-            tristique est.
-            Nulla mauris orci, ultrices sit amet volutpat eget, aliquam eu purus. Cras orci enim, interdum id nisi vel,
-            viverra tempus tortor.
-            Duis vel risus eget leo posuere ornare at eget leo. Cras et tortor efficitur, tincidunt ex eget, blandit
-            neque. Fusce vitae mauris id justo viverra blandit.
-            Curabitur tempus, tellus condimentum aliquet tristique, arcu dolor convallis eros, interdum aliquam leo dui
-            nec felis.
-            Suspendisse eu turpis eu elit volutpat condimentum. Fusce mi mauris, placerat vel blandit at, gravida sed
-            nibh. Mauris semper varius metus, non sagittis nulla ullamcorper sit amet.
-            Suspendisse non mi mauris. Donec tortor mauris, consectetur vel erat viverra, ultrices accumsan ipsum.
-            Integer ac eros a ante interdum sagittis eget sit amet neque. Mauris iaculis purus velit,
-            a posuere nisl ultricies a. Donec convallis rhoncus interdum. Vestibulum bibendum urna neque, a pharetra
-            ante blandit eu. Mauris ac placerat turpis. Vivamus imperdiet nulla sed sapien efficitur,
-            at vulputate quam fringilla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-            inceptos himenaeos.
-        </p>
+        <div class="container">
+            <p>
+                Arrivés à la poupe du navire, la liberté est à portée de main ! Un canot attend l’équipe pour qu’elle
+                puisse s’enfuir, éclairée par quelques lanternes vacillantes. Il ne reste qu’à mettre à l’eau
+                l’embarcation avant l’arrivée des derniers gardes. Cependant, les mécanismes lents et rouillés ne
+                fonctionnent plus, bloquant pour l’instant les aventuriers. Le temps presse : ils doivent réparer le
+                mécanisme qui permet de descendre les canots et s’échapper. Pour cela, ils doivent retrouver des outils
+                récoltés au cours de l’aventure : une manivelle pour le système de poulie, un engrenage manquant qui
+                assure la liaison entre les différents mécanismes, et une scie équipée d’un dispositif de sécurité pour
+                couper des cordages emmêlés retenant le bateau. Enfin, ils devront mettre le canot à la mer, qui se
+                trouve dans un bassin non visible pour des raisons logistiques, afin de savourer leur victoire. L’équipe
+                doit faire preuve d’ingéniosité et de rapidité pour convertir tous leurs efforts en succès, car la
+                liberté n’attend pas !
+            </p>
+            <img src="./css/room4.jpg" alt="Escape Game">
+        </div>
     </article>
 </main>
 
