--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>SAE 1.05 - Escape Game</title>
-    <link rel="icon" type="image" href="css/favicon.png">
+    <link rel="icon" type="image/png" href="css/favicon.png">
 </head>
 
 <body>
